fix: Spacing/sizing of tetris pieces

--- a/src/app/random/tetris/tetris.component.scss
+++ b/src/app/random/tetris/tetris.component.scss
@@ -1,7 +1,8 @@
 :host {
   display: block;
-  width: 248px;
+  width: 272px;
   height: 110px;
+  padding: 1rem;
   box-shadow: 3px 3px 5px rgba(0,0,0,0.5);
   background: #EFEFEF;
 
@@ -16,7 +17,8 @@
     width: 100%;
 
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
 
     .pieces {
       height: 110px;
@@ -54,6 +56,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        
         h3 {
           font-size: 1rem;
           margin-left: 0.5rem;
@@ -61,11 +64,15 @@
         img {
           width: 48px;
           height: 48px;
+          border: 3px solid #AAA;
+          border-radius: 8px;
+          background: #131313;
+          margin-left: 0.5rem;
         }
       }
 
       .gradient-button {
-        border: 3px solid #666;
+        border: 3px solid #AAA;
         margin: 5px;
         font-family: "Arial Black", Gadget, sans-serif;
         font-size: 16px;
@@ -77,7 +84,7 @@
         color: #FFF;
         box-shadow: 3px 3px 20px rgba(0,0,0,0.3);
         border-radius: 8px;
-        width: 64px;
+        width: 86px;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
         transition: all 0.3s cubic-bezier(.25,.8,.25,1);
         cursor: pointer;
@@ -97,8 +104,13 @@
     margin-left: 0.5rem;
     flex-direction: column;
     align-items: flex-start;
-    height: 110px;
+    height: 112px;
     overflow-y: hidden;
+
+    h4 {
+      font-size: 0.75rem;
+      font-weight: bold;
+    }
     img {
       width: 32px;
       height: 32px;
